--- a/SmartPos/SmartPos.csproj
+++ b/SmartPos/SmartPos.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <None Update="appsettings.json">
       <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
