Se agrego el metodo de crear usuario

--- a/SmartPos/SmartPos.csproj
+++ b/SmartPos/SmartPos.csproj
@@ -37,4 +37,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Comunes\InverseBoolToVisConverter\" />
+  </ItemGroup>
+
 </Project>
