Se agrego el metodo de obtener vendedores

--- a/Aplicacion/Aplicacion.csproj
+++ b/Aplicacion/Aplicacion.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Infraestructura\Infraestructura.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\Comunes\" />
+  </ItemGroup>
+
 </Project>
