--- a/SmartPos/appsettings.json
+++ b/SmartPos/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "ConnectionStrings": {
-    "conectionDataBase": "Server=DESKTOP-5RCL6C7\\SQLEXPRESS; initial Catalog=SmartPos; Integrated Security=True; TrustServerCertificate=true;"
+  "DataBaseSetting": {
+    "ConnectionString": "Server=DESKTOP-5RCL6C7\\SQLEXPRESS; initial Catalog=SmartPos; Integrated Security=True; TrustServerCertificate=true;"
   }
 }
